kubernetes/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restauranty-auth
  namespace: restauranty

spec:
  replicas: 2

  selector:
    matchLabels:
      app: restauranty-auth

  template:
    metadata:
      labels:
        app: restauranty-auth

    spec:
      containers:
        - name: auth

          image: acrrestaurantytatiana.azurecr.io/restauranty-auth:v1

          ports:
            - containerPort: 3001

          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: restauranty
  labels:
    app: restauranty-auth

spec:
  selector:
    app: restauranty-auth

  ports:
    - name: metrics
      port: 3001
      targetPort: 3001

  type: ClusterIP
