kubernetes/discounts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restauranty-discounts
  namespace: restauranty

spec:
  replicas: 2

  selector:
    matchLabels:
      app: restauranty-discounts

  template:
    metadata:
      labels:
        app: restauranty-discounts

    spec:
      containers:
        - name: discounts
          image: acrrestaurantytatiana.azurecr.io/restauranty-discounts:v1

          ports:
            - containerPort: 3002

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: discounts
  namespace: restauranty
  labels:
    app: restauranty-discounts

spec:
  selector:
    app: restauranty-discounts

  ports:
    - name: metrics
      port: 3002
      targetPort: 3002

  type: ClusterIP
