kubernetes/honeypot.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: honeypot

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cowrie
  namespace: honeypot

spec:
  replicas: 1

  selector:
    matchLabels:
      app: cowrie

  template:
    metadata:
      labels:
        app: cowrie

    spec:
      containers:
        - name: cowrie
          image: cowrie/cowrie:latest

          ports:
            - name: ssh
              containerPort: 2222

          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: cowrie
  namespace: honeypot

spec:
  selector:
    app: cowrie

  externalTrafficPolicy: Local

  ports:
    - name: ssh
      port: 2222
      targetPort: 2222


  type: LoadBalancer
