kubernetes/items.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restauranty-items
  namespace: restauranty

spec:
  replicas: 2

  selector:
    matchLabels:
      app: restauranty-items

  template:
    metadata:
      labels:
        app: restauranty-items

    spec:
      containers:
        - name: items
          image: acrrestaurantytatiana.azurecr.io/restauranty-items:v1

          ports:
            - containerPort: 3003

          readinessProbe:
            httpGet:
              path: /health
              port: 3003
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: items
  namespace: restauranty
  labels:
    app: restauranty-items

spec:
  selector:
    app: restauranty-items

  ports:
    - name: metrics
      port: 3003
      targetPort: 3003

  type: ClusterIP
