kubernetes/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: restauranty

spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
        - name: mongodb
          image: mongo:8

          ports:
            - containerPort: 27017

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
              ephemeral-storage: "500Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
              ephemeral-storage: "2Gi"

          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db

      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc
            
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: restauranty

spec:
  selector:
    app: mongodb

  ports:
    - port: 27017
      targetPort: 27017

  type: ClusterIP
