kubernetes/ollama.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: restauranty

spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: ollama

  template:
    metadata:
      labels:
        app: ollama

    spec:
      containers:
        - name: ollama
          image: ollama/ollama:latest

          ports:
            - containerPort: 11434

          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"

            limits:
             cpu: "1000m"
             memory: "2Gi"

          volumeMounts:
            - name: ollama-models
              mountPath: /root/.ollama

      volumes:
        - name: ollama-models
          persistentVolumeClaim:
            claimName: ollama-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: restauranty

spec:
  selector:
    app: ollama

  ports:
    - port: 11434
      targetPort: 11434

  type: ClusterIP
